--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -3,7 +3,52 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": [
+    "# Currency Hedging\n",
+    "Assume that an EUR based investor is investing in EUR and US equities and EUR and\n",
+    "USD denominated zero coupon bonds. The investor has a one year investment horizon.\n",
+    "The investor’s objective is to find the optimal portfolio when allowing hedging of the USD\n",
+    "exposure. The hedging will be performed using one year FX forward contracts that allows\n",
+    "the investor to buy or sell one USD at a pre-specified price in one year.\n",
+    "\n",
+    "The market is assumed to be driven by a set of market invariants:\n",
+    "\n",
+    "\\\n",
+    "\\begin{align*}\n",
+    "\\Delta X_t = \\left(\\begin{array}{c}\n",
+    "\\Delta \\log FX_t^{US,local} \\\\\n",
+    "\\Delta \\log V_t^{US} \\\\\n",
+    "\\Delta \\log V_t^{EUR} \\\\\n",
+    "\\Delta \\log V_t^{EUR,1/12} \\\\\n",
+    "\\Delta y_t^{EUR,1} \\\\\n",
+    "\\Delta y_t^{EUR,3} \\\\\n",
+    "\\Delta y_t^{EUR,5} \\\\\n",
+    "\\Delta y_t^{EUR,7} \\\\\n",
+    "\\Delta y_t^{EUR,10} \\\\\n",
+    "\\Delta y_t^{USD,1/12} \\\\\n",
+    "\\Delta y_t^{USD,1} \\\\\n",
+    "\\Delta y_t^{USD,3} \\\\\n",
+    "\\Delta y_t^{USD,5} \\\\\n",
+    "\\Delta y_t^{USD,7} \\\\\n",
+    "\\Delta y_t^{USD,10}\n",
+    "\\end{array}\\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "The time step is assumed to be one week or 1/52 years. $FX_t$ denotes the EUR/USD exchange rate, the number of USD required to buy one EUR, $\\log V_t^{US,local}$ denotes the value of US equities measured in USD, $\\log V_t^{EUR}$ denotes the value of EUR equities measured in EUR, $y_t^{x,\\tau}$ is the $\\tau$ year continuously compounded zero coupon yield for the $x$ economy. The whole USD and EUR yield curve is spanned by these two set of zero coupon yields. The yields for any given time to maturity can be obtained by linear interpolation.\n",
+    "\n",
+    "The market invariants are normally distributed\n",
+    "\n",
+    "$$\n",
+    "\\Delta X_t \\sim \\mathcal{N}(\\mu, \\Sigma)\n",
+    "$$\n",
+    "\n",
+    "The covariance matrix is provided in the file `covariance_matrix.xlsx`. The vector of expectations is given by $\\mu = (0, 0.07 \\cdot \\Delta t, 0.06 \\cdot \\Delta t, 0^T,0^T)^T$.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
    "id": "e27069d677001999"
   },
   {
@@ -29,7 +74,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": "Assume that we are standing at time $t = 0$ with initial values, $x_0$, as specified in `init_values.xlsx`. What is the distribution of $X_1$? Simulate the evolution of $X_t$ with weekly time steps from time zero to the horizon. Visualize the evolution of $\\log F{X_t}$.\n",
    "id": "d502b05b61aea1f"
   },
   {
@@ -95,6 +140,12 @@
    "execution_count": 2
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Obtain the distribution of $V_{1}^{US,local}$. Again, simulate the evolution of $V_{1}^{US,local}$. Compare the simulated data with the true analytical distribution.\n",
+   "id": "bcb417663075fc00"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-09T16:59:24.246482Z",
@@ -153,6 +204,12 @@
     }
    ],
    "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Explain how to calculate the value of a EUR or USD zero coupon bond based on the vector of yields at a given point in time. What is the distribution of an initial 5 year zero coupon at the horizon? Simulate the evolution of the initial 5 year zero coupon bond. Compare the simulated data with the true analytical distribution.\n",
+   "id": "2994644e16f2255"
   },
   {
    "metadata": {
@@ -226,6 +283,12 @@
    "execution_count": 9
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "What is the joint distribution of the vector $P_1 = (F{X_1}, V_{1}^{US,local}, V_{1}^{EUR}, Z_{1}^{USD 4Y,local}, Z_{1}^{EUR 4Y})^T$? Here $Z_{1}^{USD 4Y,local}$ denotes a 4 year USD zero coupon bond such the investor initially has bought a 5 year zero coupon bond.\n",
+   "id": "2f86382978f1ebc3"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-09T17:01:24.704542Z",
@@ -294,6 +357,12 @@
     }
    ],
    "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "What is the distribution of the vector $P_{1}^{EUR} = (\\frac{1}{F{X_1}}, V_{1}^{US}, V_{1}^{EUR}, Z_{1}^{USD 4Y}, Z_{1}^{EUR 4Y})^T$ where all values are in EUR? Compare the simulated data with the true analytical distribution for $V_{1}^{US}$.\n",
+   "id": "c0d7c99bd39ee6f6"
   },
   {
    "metadata": {
@@ -394,6 +463,42 @@
    "execution_count": 6
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The one year FX forward price is given by\n",
+    "\n",
+    "$$\n",
+    "F_0^1 = F{X_0} e^{1\\cdot(y_{0}^{USD,1} - y_{0}^{EUR,1})}\n",
+    "$$\n",
+    "\n",
+    "which is the exchange rate (the price of one EUR in USD) that the investor can lock in at time zero.\n",
+    "\n",
+    "The investor can choose a 5 x 1 holding vector **$h$** which defines the number of units in each asset / instrument. The first instrument is a FX forward that gives the investor the right and obligation to sell 1 unit of USD for the price $1/F_0^1$ in one year while the remaining assets are the ones discussed above. Note that the forward contract has a value of zero initially. The portfolio PnL of the investor is given by the product of the holding vector and the vector of PnLs\n",
+    "\n",
+    "$$\n",
+    "PnL_1 = h^T PnL_1\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "PnL_1 = \\begin{pmatrix}\n",
+    "\\frac{1}{F_0^1} - \\frac{1}{F_{X_1}} \\\\\n",
+    "V_{1}^{US} - V_{0}^{US} \\\\\n",
+    "V_{1}^{EUR} - V_{0}^{EUR} \\\\\n",
+    "Z_{1}^{USD 4Y} - Z_{0}^{USD 5Y} \\\\\n",
+    "Z_{1}^{EUR 4Y} - Z_{0}^{EUR 5Y}\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "How could we calculate the expectation and the covariance matrix of the PnL vector? What is the distribution of the PnL vector? Can we derive the distribution of the PnL of the portfolio? What is the expectation and variance of the portfolio PnL?\n",
+    "\n",
+    "\n"
+   ],
+   "id": "cbd17b5fac0b9f39"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-09T17:11:18.190627Z",
@@ -489,6 +594,105 @@
     }
    ],
    "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The optimal number of FX forward contracts, $h_1$, to minimize the PnL variance for a fixed allocation to the remaining assets $h_2$ ($h = (h_1, h_2^T)^T$) is given by\n",
+    "\n",
+    "$$\n",
+    "h_1 = \\frac{-\\Sigma^{PnL}_{12} h_2}{\\Sigma^{PnL}_{11}}\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\Sigma_{PnL} = \\begin{pmatrix}\n",
+    "\\Sigma^{PnL}_{11} & \\Sigma^{PnL}_{12} \\\\\n",
+    "\\Sigma^{PnL}_{21} & \\Sigma^{PnL}_{22}\n",
+    "\\end{pmatrix}\n",
+    "$$\n"
+   ],
+   "id": "60d507730a48088e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Define the hedge ratio as the amount USD hedged (the number of forward contracts) relative to the amount of USD invested. Consider three different portfolios: One that invests 1 EUR in 5 year USD zero coupon bond and one that invests 0.2 EUR in both US and EUR equities and 0.3 EUR in both EUR and USD zero coupon bonds. For the three portfolios plot the combinations of standard deviation and expected PnL for hedge ratios ranging from -1 to 1.5. Calculate the optimal hedge ratios for each portfolio and add their standard deviation and expected PnL to the plots. What do you observe?\n",
+   "id": "f1b8e920de10da2c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "40a45fb2313ca1ef"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "For the multi-asset portfolio, describe how to find the minimum 5% CVaR hedge ratio. Plot the combinations of 5% CVaR and expected PnL for hedge ratios ranging from -1 to 1.5. What do you observe?\n",
+   "id": "de3a35fa6b2044ee"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "8c1159e81bbdc272"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "For the multi-asset portfolio, describe how to perform a simulation study that examines the effect of estimation uncertainty from estimating $\\Sigma$ using the sample covariance matrix while keeping $\\mu$ fixed. Consider a two year sample of the market invariants. Based on simulated covariance matrices, calculate optimal hedge ratios. Evaluate the simulated optimal hedge ratios using the true distributional parameters to visualize the resulting distributions of expected PnL, standard deviation, 5% CVaR, etc.\n",
+   "id": "22781407bba89995"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "46d5a4d376812e25"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The investor is considering different portfolio optimization strategies for setting both the optimal asset weights and the optimal hedge ratio. The three possibilities are:\n",
+    "\n",
+    "- Mean-Variance portfolio optimization using pre-specified hedge ratios equal to the asset specific optimal (minimum-variance) hedge ratios.\n",
+    "- Initial Mean-Variance portfolio optimization with a hedge ratio constrained to zero followed by choosing the hedge ratio as the minimum-variance hedge ratio.\n",
+    "- Full scale Mean-Variance portfolio optimization that allows the hedge ratio to be calculated directly.\n",
+    "\n",
+    "Implement the three portfolio optimization strategies. A non-shorting constraint is imposed for the four assets, but not the forward contract. The investor has a budget of 1 EUR. For each strategy, the efficient frontier needs to be calculated for all possible PnL targets from the smallest to the largest. Present relevant visualizations and discuss your results.\n"
+   ],
+   "id": "52f64f496b824c3f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "55ab70bf84cc46d2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Perform a simulation study that examines the effect of estimation uncertainty from estimating $\\Sigma$ using the sample covariance matrix while keeping $\\mu$ fixed for the three strategies (consider only one or two portfolios on the efficient frontier, e.g., the minimum-variance portfolio). Present and discuss relevant results.\n",
+   "id": "2ce4fac112e72efa"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3fd33de4459cfd67"
   }
  ],
  "metadata": {
