--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -19,7 +19,7 @@
     "\\Delta \\log FX_t^{US,local} \\\\\n",
     "\\Delta \\log V_t^{US} \\\\\n",
     "\\Delta \\log V_t^{EUR} \\\\\n",
-    "\\Delta \\log V_t^{EUR,1/12} \\\\\n",
+    "\\Delta y_t^{EUR,1/12} \\\\\n",
     "\\Delta y_t^{EUR,1} \\\\\n",
     "\\Delta y_t^{EUR,3} \\\\\n",
     "\\Delta y_t^{EUR,5} \\\\\n",
