--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -16,8 +16,8 @@
     "\\\n",
     "\\begin{align*}\n",
     "\\Delta X_t = \\left(\\begin{array}{c}\n",
-    "\\Delta \\log FX_t^{US,local} \\\\\n",
-    "\\Delta \\log V_t^{US} \\\\\n",
+    "\\Delta \\log FX_t \\\\\n",
+    "\\Delta \\log V_t^{US,local} \\\\\n",
     "\\Delta \\log V_t^{EUR} \\\\\n",
     "\\Delta y_t^{EUR,1/12} \\\\\n",
     "\\Delta y_t^{EUR,1} \\\\\n",
@@ -58,8 +58,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:30:37.878373Z",
-     "start_time": "2024-12-11T14:30:37.805827Z"
+     "end_time": "2024-12-12T11:19:40.879167Z",
+     "start_time": "2024-12-12T11:19:40.793129Z"
     }
    },
    "source": [
@@ -71,7 +71,7 @@
     "import seaborn as sns"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -375,6 +375,130 @@
     }
    ],
    "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T11:19:48.868846Z",
+     "start_time": "2024-12-12T11:19:48.182185Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "# Given parameters\n",
+    "X0 = x0\n",
+    "mu = mean_vector\n",
+    "Sigma = covariance_matrix\n",
+    "time_steps = 52  # Number of weekly time steps\n",
+    "\n",
+    "# Calculate mean and covariance matrix of X1\n",
+    "mean_X1 = X0 + time_steps * mu\n",
+    "cov_X1 = time_steps * Sigma\n",
+    "\n",
+    "# Define indices for P1 components in X1\n",
+    "log_FX_index = 0\n",
+    "log_V_US_index = 1\n",
+    "log_V_EUR_index = 2\n",
+    "y_US_3_index = 11\n",
+    "y_US_5_index = 12\n",
+    "y_EUR_3_index = 5\n",
+    "y_EUR_5_index = 6\n",
+    "\n",
+    "# Analytical transformations for P1 components\n",
+    "# Mean and variance of lognormal variables are derived from the normal distribution of X1\n",
+    "mean_log_FX = mean_X1[log_FX_index]\n",
+    "var_log_FX = cov_X1[log_FX_index, log_FX_index]\n",
+    "\n",
+    "mean_log_V_US = mean_X1[log_V_US_index]\n",
+    "var_log_V_US = cov_X1[log_V_US_index, log_V_US_index]\n",
+    "\n",
+    "mean_log_V_EUR = mean_X1[log_V_EUR_index]\n",
+    "var_log_V_EUR = cov_X1[log_V_EUR_index, log_V_EUR_index]\n",
+    "\n",
+    "# Interpolation for yields to calculate bond prices\n",
+    "mean_y_US_4 = mean_X1[y_US_3_index] + (4 - 3) / (5 - 3) * (mean_X1[y_US_5_index] - mean_X1[y_US_3_index])\n",
+    "var_y_US_4 = (\n",
+    "    (4 - 3) / (5 - 3) ** 2 * cov_X1[y_US_5_index, y_US_5_index]\n",
+    "    + cov_X1[y_US_3_index, y_US_3_index]\n",
+    "    - 2 * (4 - 3) / (5 - 3) * cov_X1[y_US_3_index, y_US_5_index]\n",
+    ")\n",
+    "\n",
+    "mean_y_EUR_4 = mean_X1[y_EUR_3_index] + (4 - 3) / (5 - 3) * (mean_X1[y_EUR_5_index] - mean_X1[y_EUR_3_index])\n",
+    "var_y_EUR_4 = (\n",
+    "    (4 - 3) / (5 - 3) ** 2 * cov_X1[y_EUR_5_index, y_EUR_5_index]\n",
+    "    + cov_X1[y_EUR_3_index, y_EUR_3_index]\n",
+    "    - 2 * (4 - 3) / (5 - 3) * cov_X1[y_EUR_3_index, y_EUR_5_index]\n",
+    ")\n",
+    "\n",
+    "# Mean and variance for lognormal bond prices\n",
+    "mean_Z_US_4Y = -mean_y_US_4 * 4\n",
+    "var_Z_US_4Y = (4 ** 2) * var_y_US_4\n",
+    "\n",
+    "mean_Z_EUR_4Y = -mean_y_EUR_4 * 4\n",
+    "var_Z_EUR_4Y = (4 ** 2) * var_y_EUR_4\n",
+    "\n",
+    "# Jacobian matrix for transformations\n",
+    "J = np.zeros((5, len(X0)))\n",
+    "\n",
+    "# Fill Jacobian entries for each transformation\n",
+    "# FX_1 = exp(log FX)\n",
+    "J[0, log_FX_index] = np.exp(mean_log_FX)\n",
+    "\n",
+    "# V1_US = exp(log V_US)\n",
+    "J[1, log_V_US_index] = np.exp(mean_log_V_US)\n",
+    "\n",
+    "# V1_EUR = exp(log V_EUR)\n",
+    "J[2, log_V_EUR_index] = np.exp(mean_log_V_EUR)\n",
+    "\n",
+    "# Z1_US_4Y = exp(-y_US_4 * 4)\n",
+    "J[3, y_US_3_index] = -4 * (1 - (4 - 3) / (5 - 3)) * np.exp(mean_Z_US_4Y)\n",
+    "J[3, y_US_5_index] = -4 * (4 - 3) / (5 - 3) * np.exp(mean_Z_US_4Y)\n",
+    "\n",
+    "# Z1_EUR_4Y = exp(-y_EUR_4 * 4)\n",
+    "J[4, y_EUR_3_index] = -4 * (1 - (4 - 3) / (5 - 3)) * np.exp(mean_Z_EUR_4Y)\n",
+    "J[4, y_EUR_5_index] = -4 * (4 - 3) / (5 - 3) * np.exp(mean_Z_EUR_4Y)\n",
+    "\n",
+    "# Covariance matrix of P1\n",
+    "cov_P1 = J @ cov_X1 @ J.T\n",
+    "\n",
+    "# Output mean vector and covariance matrix of P1\n",
+    "mean_P1 = np.array([\n",
+    "    np.exp(mean_log_FX),\n",
+    "    np.exp(mean_log_V_US),\n",
+    "    np.exp(mean_log_V_EUR),\n",
+    "    np.exp(mean_Z_US_4Y),\n",
+    "    np.exp(mean_Z_EUR_4Y),\n",
+    "])\n",
+    "\n",
+    "print(\"Mean of P1:\", mean_P1)\n",
+    "print(\"Covariance matrix of P1:\", cov_P1)\n"
+   ],
+   "id": "e3f965a4528b1e4a",
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "(0, 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "File \u001B[0;32m/opt/anaconda3/envs/fin_econ_2024/lib/python3.12/site-packages/pandas/core/indexes/base.py:3805\u001B[0m, in \u001B[0;36mIndex.get_loc\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   3804\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 3805\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_engine\u001B[38;5;241m.\u001B[39mget_loc(casted_key)\n\u001B[1;32m   3806\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n",
+      "File \u001B[0;32mindex.pyx:167\u001B[0m, in \u001B[0;36mpandas._libs.index.IndexEngine.get_loc\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32mindex.pyx:196\u001B[0m, in \u001B[0;36mpandas._libs.index.IndexEngine.get_loc\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001B[0m, in \u001B[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001B[0m, in \u001B[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;31mKeyError\u001B[0m: (0, 0)",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[3], line 23\u001B[0m\n\u001B[1;32m     20\u001B[0m \u001B[38;5;66;03m# Analytical transformations for P1 components\u001B[39;00m\n\u001B[1;32m     21\u001B[0m \u001B[38;5;66;03m# Mean and variance of lognormal variables are derived from the normal distribution of X1\u001B[39;00m\n\u001B[1;32m     22\u001B[0m mean_log_FX \u001B[38;5;241m=\u001B[39m mean_X1[log_FX_index]\n\u001B[0;32m---> 23\u001B[0m var_log_FX \u001B[38;5;241m=\u001B[39m cov_X1[log_FX_index, log_FX_index]\n\u001B[1;32m     25\u001B[0m mean_log_V_US \u001B[38;5;241m=\u001B[39m mean_X1[log_V_US_index]\n\u001B[1;32m     26\u001B[0m var_log_V_US \u001B[38;5;241m=\u001B[39m cov_X1[log_V_US_index, log_V_US_index]\n",
+      "File \u001B[0;32m/opt/anaconda3/envs/fin_econ_2024/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001B[0m, in \u001B[0;36mDataFrame.__getitem__\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   4100\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcolumns\u001B[38;5;241m.\u001B[39mnlevels \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:\n\u001B[1;32m   4101\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_getitem_multilevel(key)\n\u001B[0;32m-> 4102\u001B[0m indexer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcolumns\u001B[38;5;241m.\u001B[39mget_loc(key)\n\u001B[1;32m   4103\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m is_integer(indexer):\n\u001B[1;32m   4104\u001B[0m     indexer \u001B[38;5;241m=\u001B[39m [indexer]\n",
+      "File \u001B[0;32m/opt/anaconda3/envs/fin_econ_2024/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001B[0m, in \u001B[0;36mIndex.get_loc\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   3807\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(casted_key, \u001B[38;5;28mslice\u001B[39m) \u001B[38;5;129;01mor\u001B[39;00m (\n\u001B[1;32m   3808\u001B[0m         \u001B[38;5;28misinstance\u001B[39m(casted_key, abc\u001B[38;5;241m.\u001B[39mIterable)\n\u001B[1;32m   3809\u001B[0m         \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28many\u001B[39m(\u001B[38;5;28misinstance\u001B[39m(x, \u001B[38;5;28mslice\u001B[39m) \u001B[38;5;28;01mfor\u001B[39;00m x \u001B[38;5;129;01min\u001B[39;00m casted_key)\n\u001B[1;32m   3810\u001B[0m     ):\n\u001B[1;32m   3811\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m InvalidIndexError(key)\n\u001B[0;32m-> 3812\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m(key) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01merr\u001B[39;00m\n\u001B[1;32m   3813\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mTypeError\u001B[39;00m:\n\u001B[1;32m   3814\u001B[0m     \u001B[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001B[39;00m\n\u001B[1;32m   3815\u001B[0m     \u001B[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001B[39;00m\n\u001B[1;32m   3816\u001B[0m     \u001B[38;5;66;03m#  the TypeError.\u001B[39;00m\n\u001B[1;32m   3817\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_check_indexing_error(key)\n",
+      "\u001B[0;31mKeyError\u001B[0m: (0, 0)"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {},
