--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -581,7 +581,7 @@
     "\n",
     "\n",
     "\n",
-    "Define the hedge ratio as the amount USD hedged (the number of forward contracts) relative to the amount of USD invested. Consider three different portfolios: One that invests 1 EUR in 5 year USD zero coupon bond and one that invests 0.2 EUR in both US and EUR equities and 0.3 EUR in both EUR and USD zero coupon bonds. For the three portfolios plot the combinations of standard deviation and expected PnL for hedge ratios ranging from -1 to 1.5. Calculate the optimal hedge ratios for each portfolio and add their standard deviation and expected PnL to the plots. What do you observe?\n"
+    "Define the hedge ratio as the amount USD hedged (the number of forward contracts) relative to the amount of USD invested. Consider three different portfolios: One that invests 1 EUR in US equities, one that invests 1 EUR in 5 year USD zero coupon bond and one that invests 0.2 EUR in both US and EUR equities and 0.3 EUR in both EUR and USD zero coupon bonds. For the three portfolios plot the combinations of standard deviation and expected PnL for hedge ratios ranging from -1 to 1.5. Calculate the optimal hedge ratios for each portfolio and add their standard deviation and expected PnL to the plots. What do you observe?\n"
    ],
    "id": "f1b8e920de10da2c"
   },
